<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="TwitterApp" customModuleProvider="target">
            <connections>
                <outlet property="passwordField" destination="4Jb-lb-iaV" id="Mxn-bp-25V"/>
                <outlet property="usernameField" destination="8vj-xr-Bf1" id="9g0-0d-tFv"/>
                <outlet property="view" destination="2uO-Bs-fIK" id="6Du-sk-v39"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="2uO-Bs-fIK">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8vj-xr-Bf1">
                    <rect key="frame" x="16" y="251" width="343" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="usernameField"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="343" id="60C-xD-gat"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3u-x5-Jr0" userLabel="Username Label">
                    <rect key="frame" x="16" y="222" width="343" height="21"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="343" id="733-s5-1r7"/>
                        <constraint firstAttribute="height" constant="21" id="clx-hB-s9Z"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Xb-ox-3hY">
                    <rect key="frame" x="16" y="299" width="343" height="21"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="343" id="FQb-Mo-tSs"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="********" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Jb-lb-iaV">
                    <rect key="frame" x="16" y="328" width="343" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="passwordField"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="343" id="PWv-mL-O69"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e4W-xA-66g" userLabel="Login Button">
                    <rect key="frame" x="137.5" y="379" width="100" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="100" id="60Y-No-qeF"/>
                    </constraints>
                    <state key="normal" title="Login"/>
                    <connections>
                        <action selector="loginTapped:" destination="-1" eventType="touchUpOutside" id="ekB-v9-QiP"/>
                        <action selector="loginTapped:" destination="-1" eventType="touchUpInside" id="yJ0-Hv-RFd"/>
                    </connections>
                </button>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfJ-1h-9sE" userLabel="Log in Label">
                    <rect key="frame" x="157" y="124" width="61" height="28"/>
                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <accessibility key="accessibilityConfiguration" identifier="loginView"/>
            <constraints>
                <constraint firstItem="4Jb-lb-iaV" firstAttribute="centerX" secondItem="9Xb-ox-3hY" secondAttribute="centerX" id="2DH-6Y-fs0"/>
                <constraint firstItem="4Jb-lb-iaV" firstAttribute="top" secondItem="9Xb-ox-3hY" secondAttribute="bottom" constant="8" id="33i-nK-R3p"/>
                <constraint firstItem="8vj-xr-Bf1" firstAttribute="top" secondItem="f3u-x5-Jr0" secondAttribute="bottom" constant="8" id="4dl-AI-AbG"/>
                <constraint firstItem="f3u-x5-Jr0" firstAttribute="top" secondItem="BfJ-1h-9sE" secondAttribute="bottom" constant="70" id="D1M-5r-ejP"/>
                <constraint firstItem="BfJ-1h-9sE" firstAttribute="centerX" secondItem="7RT-TS-Igq" secondAttribute="centerX" id="Dzv-FR-cq7"/>
                <constraint firstItem="9Xb-ox-3hY" firstAttribute="top" secondItem="8vj-xr-Bf1" secondAttribute="bottom" constant="18" id="Oe7-ed-MRH"/>
                <constraint firstItem="e4W-xA-66g" firstAttribute="centerX" secondItem="7RT-TS-Igq" secondAttribute="centerX" id="QzF-gO-bKs"/>
                <constraint firstItem="e4W-xA-66g" firstAttribute="top" secondItem="4Jb-lb-iaV" secondAttribute="bottom" constant="21" id="UHk-gb-xtl"/>
                <constraint firstItem="f3u-x5-Jr0" firstAttribute="centerX" secondItem="7RT-TS-Igq" secondAttribute="centerX" id="peS-bw-VSJ"/>
                <constraint firstItem="9Xb-ox-3hY" firstAttribute="centerX" secondItem="7RT-TS-Igq" secondAttribute="centerX" id="pgy-tf-kre"/>
                <constraint firstItem="BfJ-1h-9sE" firstAttribute="top" secondItem="7RT-TS-Igq" secondAttribute="top" constant="104" id="xA4-lF-h0N"/>
                <constraint firstItem="8vj-xr-Bf1" firstAttribute="centerX" secondItem="f3u-x5-Jr0" secondAttribute="centerX" id="ync-kX-9v7"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="7RT-TS-Igq"/>
            <point key="canvasLocation" x="53.600000000000001" y="93.103448275862078"/>
        </view>
    </objects>
</document>
