...
                                <action selector="composeTapped:" destination="-1" id="q3K-V9-3fc"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="o6u-ve-Cit"/>
                        <barButtonItem title="Logout" id="SRB-Ek-kDS">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="logoutButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="logoutTapped:" destination="-1" id="dFw-YD-fJO"/>
                            </connections>
                        </barButtonItem>
                    </items>
                </toolbar>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="tweetsView"/>
            <constraints>
                <constraint firstItem="STR-5o-p3x" firstAttribute="top" secondItem="8ez-9Y-n6X" secondAttribute="bottom" id="858-Xv-4NQ"/>
                <constraint firstItem="8ez-9Y-n6X" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="8uN-ML-F3c"/>
                <constraint firstItem="STR-5o-p3x" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Y83-Li-ZFv"/>
                <constraint firstItem="STR-5o-p3x" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="Zfh-sZ-N5P"/>
                <constraint firstItem="STR-5o-p3x" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="aZw-ns-Cir"/>
...
