...
                        <constraint firstAttribute="height" constant="60" id="tSa-wC-kdY"/>
                        <constraint firstAttribute="width" constant="60" id="y7v-du-hUI"/>
                    </constraints>
                </activityIndicatorView>
            </subviews>
            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <accessibility key="accessibilityConfiguration" identifier="loadingView"/>
            <constraints>
                <constraint firstItem="PMh-Gc-qKQ" firstAttribute="centerY" secondItem="XdR-AK-6sd" secondAttribute="centerY" id="Baq-lC-Adh"/>
                <constraint firstItem="PMh-Gc-qKQ" firstAttribute="centerX" secondItem="XdR-AK-6sd" secondAttribute="centerX" id="NRo-Zp-J4y"/>
                <constraint firstItem="XdR-AK-6sd" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="Xoa-pD-QEM"/>
                <constraint firstItem="XdR-AK-6sd" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="j9v-cs-gXT"/>
            </constraints>
...
